adicionado js config , vitest config , iniciado testes de unidade no simple logger e injeção de dependencia

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest --silent=false"
   },
   "devDependencies": {
     "vite": "^5.4.9"
